psychology spacing issues

--- a/css/ccap-history.css
+++ b/css/ccap-history.css
@@ -1249,6 +1249,7 @@ div.table-caption.caption {
   border-bottom-color: #e28f26;
   margin-top: 0;
   padding-top: 0;
+  margin-bottom: 14px;
   font-weight: medium;
   border: none;
 }
@@ -2983,6 +2984,7 @@ div.book div.preface > .titlepage h1.title {
   border-bottom-color: #e28f26;
   margin-top: 0;
   padding-top: 0;
+  margin-bottom: 14px;
   font-weight: medium;
   border: none;
 }
