--- a/css/ccap-psychology.css
+++ b/css/ccap-psychology.css
@@ -1132,6 +1132,7 @@ div.table-caption.caption {
   border-bottom-color: #eead58;
   margin-top: 0;
   padding-top: 0;
+  margin-bottom: 14px;
 }
 .preface > .section h2 {
   font-size: medium;
@@ -1210,6 +1211,7 @@ h1.title .cnx-gentext-n {
   width: 100%;
   border: none;
   padding: 0em;
+  margin-bottom: 0;
 }
 .chapter > .introduction > .toc span {
   font-weight: normal;
@@ -2786,6 +2788,7 @@ div.book div.preface > .titlepage h1.title {
   border-bottom-color: #eead58;
   margin-top: 0;
   padding-top: 0;
+  margin-bottom: 14px;
 }
 div.book div.preface > div.section div.titlepage > div > div > h2 {
   font-size: 11pt;
@@ -2918,6 +2921,7 @@ div.book div > div.section > div.section > div.section div.titlepage > div > div
   width: 100%;
   border: none;
   padding: 0em;
+  margin-bottom: 0;
 }
 .chapter > .introduction > .toc span {
   font-weight: normal;
