--- a/css/refactor/themes/humanities-slots.less
+++ b/css/refactor/themes/humanities-slots.less
@@ -878,6 +878,7 @@
     #title {
       .style(any; preface) {
         font-size: 11pt;
+
       }
       .style(any; preface; section) {
         text-transform: none;
@@ -896,6 +897,7 @@
         border-bottom-color: @orange;
         margin-top:  0;
         padding-top: 0;
+       margin-bottom: 14px;
       }
       .subtitle(...) {}
     }
